# qNewsFlash

./: .gitignore  AGENTS.md  Article.cpp  Article.h  CLAUDE.md  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  EarthQuake.cpp  EarthQuake.h  HtmlFetcher.cpp  HtmlFetcher.h  JiJiFlash.cpp  JiJiFlash.h  KeyListener.cpp  KeyListener.h  KyodoFlash.cpp  KyodoFlash.h  NtpTimeFetcher.cpp  NtpTimeFetcher.h  Poster.cpp  Poster.h  README.md  RandomGenerator.cpp  RandomGenerator.h  Runner.cpp  Runner.h  Seed.cpp  Seed.h  WriteMode.cpp  WriteMode.h  main.cpp  opencode.json
.claude/: .mcp.json  settings.json
.claude/commands/: build.md  lint.md  test.md
.claude/rules/: README.md  cmake.rules.md  cpp-code.rules.md  json-config.rules.md
.claude/skills/: GUIDE.md
.claude/skills/qt-cpp-development/: SKILL.md
.claude/skills/xpath-query/: SKILL.md
.claude/subagents/: GUIDE.md  cmake-builder.md  qt-cpp-developer.md  research-collector.md  xpath-specialist.md
.opencode/: oh-my-opencode.json
.opencode/agents/: GUIDE.md  cmake-builder.md  file-reader.md  qt-cpp-developer.md  research-collector.md  xpath-specialist.md
.opencode/skills/linux-systemd/: SKILL.md
.opencode/skills/pdf/: SKILL.md
Scripts/: qNewsFlash.sh.in
docs/: システム概要.md  システム構成.md  データフロー.md  機能要件.md  非機能要件.md
etc/: qNewsFlash.json.in  qnewsflash.service.in  qnewsflash.timer.in
